# ssaacc

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT_LOG.md  FLUTTER_COMPLETE_EXAMPLE.dart  README.md  deploy-backend.sh  deploy-ec2.sh  init-database.sh  tailwind.config.js
backend/: .env.example  .env.integrated  .env.postgresql  .env.user-integration  .gitignore  DATA_IMPORT_SUMMARY.md  DATA_SCHEMA_GUIDE.md  DOCUMENT_PROGRESS_FEATURE.md  Dockerfile  README.md  README.old.md  alembic.ini  create_document_progress_table.py  create_document_progress_table_sql.py  create_user_policies_table.py  create_youth_policies_table.py  docker-compose.yml  export_policies_to_json.py  extract_required_documents_with_llm.py  final_test.py  finkurn_users.db.backup  generate_test_token.py  import_youth_policies_from_txt.py  integration_guide.md  pyproject.toml  requirements.txt  requirements.user-integration.txt  simple_test.py  test-auth.html  test_auth_api.py  test_database_users.py  test_models.py  update_required_documents.py  youth_policies_all.json
backend/alembic/: env.py
backend/alembic/versions/: 90d050faabb1_initial_migration_create_user_.py  a218e512d7cc_initial_migration_with_all_user_models.py  b19cd7a7669e_create_user_management_tables.py
backend/app/: database.py  llm_config.py  main.py
backend/app/api/v1/: __init__.py  auth.py  chat.py  document_progress.py  onboarding.py  policies.py  tasks.py  users.py  youth_policies.py
backend/app/core/: __init__.py  database.py  security.py
backend/app/db/: milvus_client.py  pgvector_client.py
backend/app/langgraph/: graph.py  state.py
backend/app/langgraph/agents/: policy_search.py  (+2 more)
backend/app/mcp/: tools.py
backend/app/models/: __init__.py  document_progress.py  user.py  youth_policy.py
backend/app/schemas/: __init__.py  auth.py  document_progress.py  onboarding.py  policy.py  task.py  user.py  youth_policy.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  onboarding_service.py
backend/app/utils/: auth.py
backend/data/: sample_policies.json
backend/scripts/: load_mock_data.py  load_sample_data.py  reset_milvus.py  upload_to_s3.py
backend/templates/: auth_success.html
(+180 files in other folders)
