[project]
name = "finkurn-backend"
version = "0.1.0"
description = "FinKuRN AI 기반 청년 맞춤형 금융 정책 추천 서비스 백엔드"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.72.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "alembic>=1.17.1",
    "black>=25.11.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.black]
target-version = ["py311"]
line-length = 88
